--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# .idea.idea/*
+
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+!.elasticbeanstalk/*.global.yml.idea/*
