--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 
-# Elastic Beanstalk Files.elasticbeanstalk/*!.elasticbeanstalk/*.cfg.yml!.elasticbeanstalk/*.global.yml.idea/*
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml.idea/*
 
 .idea/*
