--- a/requirements.txt
+++ b/requirements.txt
@@ -21,14 +21,18 @@ ipython-genutils==0.2.0
 itsdangerous==0.24
 Jinja2==2.9.6
 jmespath==0.9.3
+joblib==0.11
 jsonschema==2.6.0
 jupyter-core==4.3.0
 MarkupSafe==1.0
 nbformat==4.3.0
 nltk==3.2.4
+numpy==1.12.1
 oauthlib==2.0.2
+olefile==0.44
 packaging==16.8
 pathspec==0.5.0
+Pillow==4.2.0
 plotly==2.0.11
 pyparsing==2.2.0
 python-dateutil==2.6.0
