--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml.idea/*
+!.elasticbeanstalk/*.global.yml
 
 .idea/*
+
