--- a/Pipfile
+++ b/Pipfile
@@ -45,7 +45,7 @@ jupyter-console = "==5.1.0"
 jupyter-core = "==4.3.0"
 markupsafe = "==1.0"
 mistune = "==0.7.4"
-mysqlclient = "==1.3.10"
+mysqlclient = "*"
 nbconvert = "==5.2.1"
 nbformat = "==4.3.0"
 nltk = "==3.2.4"
